--- a/Github-Downloader/Github-Downloader.csproj
+++ b/Github-Downloader/Github-Downloader.csproj
@@ -17,17 +17,18 @@
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="icon.png">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+        <AvaloniaResource Include="resources/**"/>
     </ItemGroup>
 
     <ItemGroup>
       <Reference Include="FileLib">
         <HintPath>..\..\Libs\FileLib.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="icon.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
