Changed build structure, build.sh, .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,12 @@ nunit-*.xml
 
 builds/github-downloader-win-x64/*
 !builds/github-downloader-win-x64/.gitkeep
+builds/github-downloader-osx-x64/*
+!builds/github-downloader-osx-x64/.gitkeep
 builds/github-downloader-linux-x64/opt/Github-Downloader/*
 !builds/github-downloader-linux-x64/opt/Github-Downloader/.gitkeep
-builds/github-downloader-linux-x64.deb
-builds/github-downloader-win-x64.zip
+builds/github-downloader-linux-arm64/opt/Github-Downloader/*
+!builds/github-downloader-linux-arm64/opt/Github-Downloader/.gitkeep
+
+builds/release-assets/*
+!builds/release-assets/.gitkeep
