--- a/builds/github-downloader-linux-arm64/DEBIAN/control
+++ b/builds/github-downloader-linux-arm64/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: github-downloader
 Version: 1.3.2
 Section: utils
-Architecture: amd64
+Architecture: arm64
 Maintainer: Tobias2888 <github.flashy834@passmail.net>
 Description: GitHub Downloader
