--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ builds/github-downloader-linux-x64/opt/Github-Downloader/*
 !builds/github-downloader-linux-x64/opt/Github-Downloader/.gitkeep
 builds/github-downloader-linux-arm64/opt/Github-Downloader/*
 !builds/github-downloader-linux-arm64/opt/Github-Downloader/.gitkeep
+builds/github-downloader-linux-x64-arch/opt/Github-Downloader/*
+!builds/github-downloader-linux-x64-arch/opt/Github-Downloader/.gitkeep
+builds/github-downloader-linux-x64-appimage/usr/bin/*
+!builds/github-downloader-linux-x64-appimage/usr/bin/.gitkeep
 
 builds/release-assets/*
 !builds/release-assets/.gitkeep
